syntax="proto3";

import "ClientServer.proto";

service ServerSyncGrpcService {
	rpc PropagateWrite (PropagateWriteRequest) returns (PropagateWriteResponse);
	rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
	rpc ReportCrash (ReportCrashRequest) returns (ReportCrashResponse); // report dead body among us
	
	// REMOVE BELOW SERVICES WHEN UPGRADING TO ADVANCED
	rpc LockObject (LockObjectRequest) returns (LockObjectReply);
	rpc ReleaseObjectLock (ReleaseObjectLockRequest) returns (ReleaseObjectLockReply);
	rpc RemoveCrashedServers (RemoveCrashedServersRequest) returns (RemoveCrashedServersReply);
}

message PropagateWriteRequest {
	string sender_replica_id = 1;
	PropagationMessage prop_msg = 2;
}

message PropagateWriteResponse {
	// empty
}

message HeartbeatRequest {
	// empty
}

message HeartbeatResponse {
	// empty
}

message ReportCrashRequest {
	string dead_replica_id = 1;
}

message ReportCrashResponse {
	// empty
}

message PropagationMessage {
	PropagationMessageId id = 1;
	string partition_id = 2;
	ObjectId object_id = 3;
	ObjectVersion object_version = 4;
	string value = 5;
}

message PropagationMessageId {
	string author_replica_id = 1;
	int32 counter = 2;
}

// REMOVE BELOW MESSAGES WHEN UPGRADING TO ADVANCED
message LockObjectRequest {
	ObjectId key = 1;
}

message LockObjectReply {
	bool success = 1;
}

message ReleaseObjectLockRequest {
	ObjectId key = 1;
	string value = 2;
}

message ReleaseObjectLockReply {
	bool success = 1;
}

message RemoveCrashedServersRequest {
	string partition_id = 1;
	repeated string serverIds = 2;
}

message RemoveCrashedServersReply {
	bool success = 1;
}
