syntax="proto3";

service ClientServerGrpcService {
	rpc ReadObject (ReadObjectRequest) returns (ReadObjectReply);
	rpc WriteObject (WriteObjectRequest) returns (WriteObjectReply);
	rpc ListServer (ListServerRequest) returns (ListServerReply);
	rpc ListGlobal (ListGlobalRequest) returns (ListGlobalReply);
}

message Key {
	string partition_id = 1;
	string object_id = 2;
}

message ObjectInfo {
	Key key = 1;
	string value = 2;
	bool isPartitionMaster = 3; 

}

message ReadObjectRequest {
	Key key = 1;
}

message ReadObjectReply {
	string value = 1;
}


message WriteObjectRequest {
	Key key = 1;
	string value = 2;
}

message WriteObjectReply {
	bool ok = 1;
}

message ListServerRequest {

}

message ListGlobalRequest {

}

message ListServerReply {
	repeated ObjectInfo objects = 1;
}

message ListGlobalReply {
	repeated Key keys = 1;	
}
